# aquarium

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
aquarium/: app.py  models.py
firmware/: ds18b20s.lua  init.lua
html/: index.html
