[tool.poetry]
name = "aquarium"
version = "0.1.0"
description = ""
authors = ["Piotr Karkut <karkucik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^8.1"
dataclasses-json = "^0.4.2"
asyncpg = "^0.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
